--- a/DIPR.Data/DIPR.Data.csproj
+++ b/DIPR.Data/DIPR.Data.csproj
@@ -54,8 +54,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Baby.cs" />
+    <Compile Include="BottleFeeding.cs" />
+    <Compile Include="Diaper.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Nursing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sleep.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
