added edit and delete functions to baby

--- a/DIPR.Models/DIPR.Models.csproj
+++ b/DIPR.Models/DIPR.Models.csproj
@@ -64,6 +64,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Baby\BabyCreate.cs" />
+    <Compile Include="Baby\BabyDetail.cs" />
+    <Compile Include="Baby\BabyEdit.cs" />
     <Compile Include="Baby\BabyListItem.cs" />
     <Compile Include="Diaper\DiaperCreate.cs" />
     <Compile Include="Diaper\DiaperListItem.cs" />
