--- a/DIPR.WebMVC/DIPR.WebMVC.csproj
+++ b/DIPR.WebMVC/DIPR.WebMVC.csproj
@@ -237,6 +237,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Baby\Index.cshtml" />
     <Content Include="Views\Baby\Create.cshtml" />
+    <Content Include="Views\Baby\Details.cshtml" />
+    <Content Include="Views\Baby\Delete.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
