--- a/DIPR.Data/DIPR.Data.csproj
+++ b/DIPR.Data/DIPR.Data.csproj
@@ -58,6 +58,15 @@
     <Compile Include="BottleFeeding.cs" />
     <Compile Include="Diaper.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202012151708122_InitialCreate.cs" />
+    <Compile Include="Migrations\202012151708122_InitialCreate.Designer.cs">
+      <DependentUpon>202012151708122_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202012151836242_error-fixes.cs" />
+    <Compile Include="Migrations\202012151836242_error-fixes.Designer.cs">
+      <DependentUpon>202012151836242_error-fixes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Nursing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sleep.cs" />
@@ -67,10 +76,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\DIPR.Models\DIPR.Models.csproj">
-      <Project>{93ea6a3b-5706-4fc2-b4e0-8bef8e28770e}</Project>
-      <Name>DIPR.Models</Name>
-    </ProjectReference>
+    <EmbeddedResource Include="Migrations\202012151708122_InitialCreate.resx">
+      <DependentUpon>202012151708122_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012151836242_error-fixes.resx">
+      <DependentUpon>202012151836242_error-fixes.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
