--- a/DIPR.WebMVC/DIPR.WebMVC.csproj
+++ b/DIPR.WebMVC/DIPR.WebMVC.csproj
@@ -240,10 +240,12 @@
     <Content Include="Views\Baby\Create.cshtml" />
     <Content Include="Views\Baby\Details.cshtml" />
     <Content Include="Views\Baby\Delete.cshtml" />
-    <Content Include="Views\Diaper\DeleteDiaper.cshtml" />
+    <Content Include="Views\Diaper\Delete.cshtml" />
     <Content Include="Views\Diaper\Index.cshtml" />
     <Content Include="Views\Diaper\Create.cshtml" />
     <Content Include="Views\Diaper\Details.cshtml" />
+    <Content Include="Views\Diaper\Edit.cshtml" />
+    <Content Include="Views\Baby\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
