--- a/DIPR.Models/DIPR.Models.csproj
+++ b/DIPR.Models/DIPR.Models.csproj
@@ -72,6 +72,10 @@
     <Compile Include="Diaper\DiaperEdit.cs" />
     <Compile Include="Diaper\DiaperListItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Sleep\SleepCreate.cs" />
+    <Compile Include="Sleep\SleepDetail.cs" />
+    <Compile Include="Sleep\SleepEdit.cs" />
+    <Compile Include="Sleep\SleepListItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
