--- a/DIPR.Services/DIPR.Services.csproj
+++ b/DIPR.Services/DIPR.Services.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BabyService.cs" />
+    <Compile Include="BottleService.cs" />
     <Compile Include="DiaperService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SleepService.cs" />
