--- a/DIPR.Data/DIPR.Data.csproj
+++ b/DIPR.Data/DIPR.Data.csproj
@@ -58,6 +58,15 @@
     <Compile Include="BottleFeeding.cs" />
     <Compile Include="Diaper.cs" />
     <Compile Include="IdentityModels.cs" />
+    <Compile Include="Migrations\202012152305402_InitialCreate.cs" />
+    <Compile Include="Migrations\202012152305402_InitialCreate.Designer.cs">
+      <DependentUpon>202012152305402_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\202012161439454_added-bottlefeeding.cs" />
+    <Compile Include="Migrations\202012161439454_added-bottlefeeding.Designer.cs">
+      <DependentUpon>202012161439454_added-bottlefeeding.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Nursing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Sleep.cs" />
@@ -65,6 +74,14 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\202012152305402_InitialCreate.resx">
+      <DependentUpon>202012152305402_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012161439454_added-bottlefeeding.resx">
+      <DependentUpon>202012161439454_added-bottlefeeding.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
