--- a/DIPR.Data/DIPR.Data.csproj
+++ b/DIPR.Data/DIPR.Data.csproj
@@ -70,6 +70,10 @@
     <Compile Include="Migrations\202012161557448_updated-listitem.Designer.cs">
       <DependentUpon>202012161557448_updated-listitem.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202012161923483_added-nursing.cs" />
+    <Compile Include="Migrations\202012161923483_added-nursing.Designer.cs">
+      <DependentUpon>202012161923483_added-nursing.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Nursing.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -88,6 +92,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202012161557448_updated-listitem.resx">
       <DependentUpon>202012161557448_updated-listitem.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202012161923483_added-nursing.resx">
+      <DependentUpon>202012161923483_added-nursing.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
