--- a/DIPR.Services/DIPR.Services.csproj
+++ b/DIPR.Services/DIPR.Services.csproj
@@ -81,6 +81,7 @@
     <Compile Include="BabyService.cs" />
     <Compile Include="BottleService.cs" />
     <Compile Include="DiaperService.cs" />
+    <Compile Include="DoctorService.cs" />
     <Compile Include="NursingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SleepService.cs" />
