--- a/DIPR.WebMVC/Web.Debug.config
+++ b/DIPR.WebMVC/Web.Debug.config
@@ -14,7 +14,7 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
-  <system.web>
+  
     <!--
       In the example below, the "Replace" transform will replace the entire
       <customErrors> section of your Web.config file.
@@ -26,5 +26,9 @@
         <error statusCode="500" redirect="InternalError.htm"/>
       </customErrors>
     -->
+	<system.web>
+		
+	  <customErrors mode="Off"/>
+		
   </system.web>
 </configuration>
