azure deployment attempt

--- a/DIPR.WebMVC/Web.Release.config
+++ b/DIPR.WebMVC/Web.Release.config
@@ -7,13 +7,14 @@
     In the example below, the "SetAttributes" transform will change the value of
     "connectionString" to use "ReleaseSQLServer" only when the "Match" locator
     finds an attribute "name" that has a value of "MyDB".
-
+-->
     <connectionStrings>
-      <add name="MyDB"
-        connectionString="Data Source=ReleaseSQLServer;Initial Catalog=MyReleaseDB;Integrated Security=True"
-        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
+      <!--<add name="DefaultConnection"
+        connectionString="Data Source=tcp:diprserver.database.windows.net,1433;Initial Catalog=DIPR.WebMVC_db;User Id=maxadmin@diprserver;Password=123abc"
+        xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>-->
+		<add name="DefaultConnection" connectionString="Data Source=tcp:diprappserver.database.windows.net,1433;Initial Catalog=DIPR.WebMVC_db;User Id=diprServer@diprappserver;Password=ABC123" providerName="System.Data.SqlClient" />
     </connectionStrings>
-  -->
+  
   <system.web>
     <compilation xdt:Transform="RemoveAttributes(debug)" />
     <!--
