connection string update

--- a/DIPR.WebMVC/Web.config
+++ b/DIPR.WebMVC/Web.config
@@ -9,7 +9,7 @@
   <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <!--<add name="DefaultConnection" connectionString="Data Source=tcp:diprserver.database.windows.net,1433;Initial Catalog=DIPR.WebMVC_db;User Id=maxadmin@diprserver;Password=123abc" providerName="System.Data.SqlClient" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-DIPR.WebMVC-20201214100642.mdf;Initial Catalog=aspnet-DIPR.WebMVC-20201214100642;Integrated Security=True" providerName="System.Data.SqlClient" />-->
     <add name="DefaultConnection" connectionString="Data Source=tcp:diprappserver.database.windows.net,1433;Initial Catalog=DIPR.WebMVC_db;User Id=diprServer@diprappserver;Password=ABC123" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
